--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/material-symbols": "^1.2.20",
+    "@iconify-json/tdesign": "^1.2.8",
     "@shuriken-ui/nuxt": "4.0.0-beta.4",
     "tailwindcss": "^4.1.5"
   }
