--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.11.0",
     "nuxt": "^3.17.2",
     "pinia": "^3.0.2",
+    "pocketbase": "^0.26.0",
     "serialport": "^13.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
