--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "preview": "pnpm run build && wrangler pages dev",
+    "postinstall": "nuxt prepare",
+    "deploy": "pnpm run build && wrangler pages deploy",
+    "cf-typegen": "wrangler types",
+    "stylelint": "stylelint \"**/*.{css,scss,vue}\"",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "stylelint:fix": "stylelint --fix"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.11.0",
@@ -19,10 +25,16 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250517.0",
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/material-symbols": "^1.2.20",
     "@iconify-json/tdesign": "^1.2.8",
+    "@nuxt/eslint": "^1.4.0",
+    "@nuxt/eslint-config": "^1.4.0",
     "@shuriken-ui/nuxt": "4.0.0-beta.4",
-    "tailwindcss": "^4.1.5"
+    "eslint": "^9.27.0",
+    "nitro-cloudflare-dev": "^0.2.2",
+    "tailwindcss": "^4.1.5",
+    "wrangler": "^4.15.2"
   }
 }
